cluster/herron-dot-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herron-dot-dev
  namespace: herron-dot-dev
  labels:
    app: herron-dot-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: herron-dot-dev
  template:
    metadata:
      labels:
        app: herron-dot-dev
    spec:
      containers:
        - name: website
          image: ghcr.io/needleinajaystack/website@sha256:40aa365f037d51fa4d5f176e904b8f57794e621cbf9dadc734c39c988aa0a6e9
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
