cluster/herron-dot-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: herron-dot-dev
spec:
  selector:
    app: herron-dot-dev
  ports:
  - port: 80
    targetPort: 80
