cluster/herron-dot-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
    external-dns.alpha.kubernetes.io/target: "97.117.4.142"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    haproxy.org/response-set-header: |
      Alt-Svc "h3=\":443\"; ma=86400"
      Cross-Origin-Resource-Policy "same-origin"
      Content-Security-Policy "frame-ancestors 'none'; upgrade-insecure-requests; report-to cf-nel"
      Referrer-Policy "same-origin"
      Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
      X-Content-Type-Options "nosniff"
  name: herron-dot-dev
  namespace: herron-dot-dev
  labels:
    app: herron-dot-dev
spec:
  ingressClassName: haproxy
  rules:
    - host: herron.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: herron-dot-dev
                port:
                  number: 80
    - host: www.herron.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: herron-dot-dev
                port:
                  number: 80
  tls:
    - hosts:
        - herron.dev
        - www.herron.dev
      secretName: herron-dot-dev-tls
